Fixed Footer on the Bottom of the page -> Text is not centered

--- a/public/themes/default/assets/sass/frontend.scss
+++ b/public/themes/default/assets/sass/frontend.scss
@@ -1,5 +1,16 @@
 @import "bootstrap";
 
+html {
+  height: 100%;
+}
+
+body {
+  overflow: scroll;
+  position: relative;
+  min-height: 100%;
+  padding-bottom: 100px;
+}
+
 a.navbar-brand {
   padding: 9px 15px;
 
@@ -10,8 +21,10 @@ a.navbar-brand {
 
 .footer {
   position: absolute;
-  bottom: 0;
+  text-align: center;
   width: 100%;
+  bottom: 0;
+  margin-bottom: 0;
 }
 
 .dropdown-submenu {
@@ -29,7 +42,7 @@ a.navbar-brand {
 }
 
 .dropdown:hover > .dropdown-menu {
-  display:block;
+  display: block;
 }
 
 .dropdown-submenu:hover > .dropdown-menu {
